--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,7 +8,7 @@
             </div>
         </div>
         <div class="row">
-            {% for post in site.posts %}
+            {% for post in site.posts limit: 10 %}
             <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
