Added interface section

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,22 +1,22 @@
  <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="success">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>
-                    Feel free to contact the developer for suggestion, feature requests and bugs.
+                    Feel free to contact the developer for suggestion, feature requests, bugs and hugs.
                     </p>
                 </div>
                 <div class="col-lg-4">
                     <p>
                         Found a bug? Open an issue on <a href="https://github.com/TigerKid001/owl/issues">Github.</a>
-                        Want to contribute? Get the <a href="https://github.com/TigerKid001/owl">source</a>!
+                        Want to contribute? Get the <a href="https://github.com/TigerKid001/owl" style="color: #{{ site.color.secondary }}">source</a>!
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
