--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -278,15 +278,70 @@ section.success {
     z-index: 2;
 }
 
+
+#interface .portfolio-item {
+    right: 0;
+    margin: 0 0 15px;
+}
+
+#interface .portfolio-item .portfolio-link {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    max-width: 400px;
+}
+
+#interface .portfolio-item .portfolio-link .caption {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background: rgba({{ site.color.primary-rgb }},.9);
+    -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    transition: all ease .5s;
+}
+
+#interface .portfolio-item .portfolio-link .caption:hover {
+    opacity: 1;
+}
+
+#interface .portfolio-item .portfolio-link .caption .caption-content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 20px;
+    margin-top: -12px;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+}
+
+#interface .portfolio-item .portfolio-link .caption .caption-content i {
+    margin-top: -12px;
+}
+
+#interface .portfolio-item .portfolio-link .caption .caption-content h3,
+#interface .portfolio-item .portfolio-link .caption .caption-content h4 {
+    margin: 0;
+}
+
+#interface * {
+    z-index: 2;
+}
+
 @media(min-width:767px) {
     #portfolio .portfolio-item {
+        margin: 0 0 30px;
+    }
+    #interface .portfolio-item {
         margin: 0 0 30px;
     }
 }
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #fff;
+    border: solid 2px #{{ site.color.secondary }};
     font-size: 20px;
     color: #{{ site.color.secondary }};
     background: 0 0;
@@ -297,9 +352,9 @@ section.success {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #fff;
+    border: solid 2px {{ site.color.secondary }};
     color: {{ site.color.primary-rgb }};
-    background: #{{ site.color.secondary }};
+    background: #{{ site.color.secondary-dark }};
 }
 
 .floating-label-form-group {
