--- a/_includes/interface.html
+++ b/_includes/interface.html
@@ -1,15 +1,15 @@
 <!-- Portfolio Grid Section -->
-<section class="success" id="portfolio">
+<section id="interface">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Gallery</h2>
-                <hr class="star-light">
+                <h2>Interface</h2>
+                <hr class="star-primary">
             </div>
         </div>
         <div class="row">
             {% for post in site.posts %}
-            {% if post.category == 'portfolio' %}
+            {% if post.category == 'interface' %}
             <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
