--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include portfolio_grid.html %}
-
+    {% include interface.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
